14-clokub-05-security-context/src/02/10-app-mod1.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    role: module01
  name: module01
spec:
  containers:
  - image: praqma/network-multitool:alpine-extra
    imagePullPolicy: IfNotPresent
    name: module01
  terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: module01
spec:
  ports:
  - name: web
    protocol: TCP
    port: 1180
  selector:
    role: module01
  type: ClusterIP
