14-clokub-05-security-context/src/02/01-np-mod1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: module01
spec:
  podSelector:
    matchLabels:
      role: module01
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: module02
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: module02
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        # private IP address
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
