14-clokub-05-security-context/src/02/02-np-mod2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: module02
spec:
  podSelector:
    matchLabels:
      role: module02
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: module01
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: module01
